fixing sidebar z-index

--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -8,7 +8,7 @@ footer {
   padding: 30px;
   bottom: 0px;
   left: 0px;
-  z-index: 901;
+  z-index: 200;
 
   a {
     color: #838383;
