--- a/assets/styles/sidebar.scss
+++ b/assets/styles/sidebar.scss
@@ -7,7 +7,7 @@ nav.sidebar-nav {
   display: inline-block;
   vertical-align: top;
   position: absolute;
-  z-index: 900;
+  z-index: 10;
   top: 0px;
   bottom: 0px;
   left: -300px;
